--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,5 +18,15 @@
     <string name="valor">Valor</string>
     <string name="ingresar">Ingresar</string>
     <string name="formulario">Ingresa tus datos</string>
+    <string name="recuerdame">Recuerdame</string>
+    <string name="configuracion">Configuracion</string>
+    <string name="info">Info</string>
+    <string name="atras">Atras</string>
+    <string name="buscar">Buscar</string>
+    <string name="informacion">Informacion</string>
+    <string name="botonbarop2">OP2</string>
+    <string name="botonbarop3">OP3</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 </resources>
