logre implementar tanto el toolbar como el bottombar que es el menu de abajo y un menu lateral me falta colocar dentro de ellos los fargmentos para ir colocando cosas dentro de

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,6 +26,9 @@
     <string name="informacion">Informacion</string>
     <string name="botonbarop2">OP2</string>
     <string name="botonbarop3">OP3</string>
+    <string name="Task_el_Cedro">Task El Cedro</string>
+    <string name="abrir">abrir</string>
+    <string name="cerrar">cerrar</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
