si bien logrre implementar fragmentos no se coloco nada dentro de el me faltaron cosas por implementar

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,5 +31,10 @@
     <string name="cerrar">cerrar</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="actualizar">Actualizar</string>
+    <string name="eliminar">Eliminar</string>
+    <string name="ver_pedidos">Ver pedidos</string>
+    <string name="filtrar">Filtrar</string>
+    <string name="task">Task</string>
 
 </resources>
