termine la funcion del menu 2 en donde el salir me manda a la pagina de login y termine de implementar las validaciones para los pedidos hacia la empresa al colocar la cantidad de bidones este se multiplica y sale el valor a pagar dependiendo de la cantidad de bidones solicitados

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,5 +37,8 @@
     <string name="elcedro">Agua Purifica El Cedro</string>
     <string name="cantidad">Cantidad</string>
     <string name="enviar_solicitud">Enviar Solicitud</string>
+    <string name="opciones">Elige una opcion</string>
+    <string name="actualizar">Actualizar</string>
+    <string name="eliminar">Eliminar</string>
 
 </resources>
